added creation of exe for easy launching on windows systems; refactored pom; separate startScripts folder in target folder; tests can now be skipped.